# sim-old

./: .gitignore  AUTHORS  COPYING  Makefile.am  TODO  configure.ac  static_compile  testsim.csv
data/: MasiByAgeGender.csv  testsimparameter.csv
sim/: Simulation.cc  Simulation.hh  common.hh  process_csv.cc  process_csv.hh  sim.hh
src/: Makefile.am  Simulation.cc  agent.cc  engine.cc  main.cc  sim.h  sim.hh  simplesim.cc  templatesim.cc  test.hh  testsim.cc
